<resources>
    <string name="requiredSpace">660</string>
    <string name="taleUrl">https://kazky.suspilne.media/tales/songs/%02d.mp3</string>
    <string name="gitTaleUrl">https://github.com/varajan/media.suspilne.kazky/raw/master/tales/%02d.mp3</string>
    <string name="coloringUrl">https://github.com/varajan/media.suspilne.kazky/raw/master/colorings/%03d.jpg</string>
    <string name="facebook_page">https://www.facebook.com/102210331819966</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="app_name">UA: Казки</string>
    <string name="reader_description">%s\nКазок: %d</string>
    <string name="radio">Радіо</string>
    <string name="tales">Казки</string>
    <string name="settings">Налаштування</string>
    <string name="coloring">Розмальовки</string>
    <string name="readers">Казкарі</string>
    <string name="info">Про програму</string>
    <string name="radio_description">Радіо хвиля авторських казок українською мовою для дітей</string>
    <string name="description">
        Версія %s\n\n
        [Радіо] - Цілодобове радіо, де звучать різноманітні казки з різних країн від Суспільного Мовлення.
        Для його роботи потрібен Інтернет.\n\n

        [Казки] - більше сотні казок: слухайте, шукайте по назві чи імені казкаря, позначайте як "улюблені".
        Збережені на пристрої казки позначені значком 💾\n\n

        [Казкарі] - Шукайте по імені, відсортуйте список за алфавітом або кількістю казок, відкрийте всі казки в один клік.\n\n

        [Розмальовки] - Чорнобілі контурні картинки усіх казок - завнтажуйте і роздрукуйте.\n\n

        [Налаштування] - виберіть скачати всі казки чи тільки улюблені, встановіть таймер сну тощо.\n\n
		
		[Екран блокування] - керуйте казками не розблоковуючи пристрій: пауза, наступна чи попередня.\n
    </string>
    <string name="prev">≪ Назад</string>
    <string name="next">Далі ≫</string>
    <string name="stop">Зупинити</string>
    <string name="rate">Оцінити</string>
    <string name="fb_page">Facebook сторінка</string>
    <string name="exit">Вийти</string>
    <string name="ok">OK</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="confirm_exit">Вийти з UA: Казки?</string>
    <string name="x_minutes">%s хвилин</string>
    <string name="no_internet">Відсутній Інтернет!</string>
    <string name="no_radio_header">На жаль, Суспільне вимкнуло Радіо.</string>
    <string name="no_radio_text">Якщо ви хочете допомогти відновити роботу радіо, то напишіть їм, що радіо Казки мовчить.\n\nТакож ви можете скористатись розділом "Казки".</string>
    <string name="radio_error">Проблеми на сервері або відсутній Інтернет!\n\nПеревірте Інтернет, спробуйте пізніше або послухайте збережені казки.</string>
    <string name="sleep_timeout">Таймер сну (зупиняти відтворення)</string>
    <string name="sleep_timeout_text">Зупинити відтворення через %s хв.</string>
    <string name="volume_timeout">Поступово зменшувати гучність</string>
    <string name="volume_timeout_text">Зменшувати гучність кожні %s хв.</string>
    <string name="coloring_download_ask">Зберегти розмальовку в папку Downloads?</string>
    <string name="coloring_download">Розмальовку буде збережено в папку Downloads</string>
    <string name="no_write_permission">Програма не має дозволу для збереження файлів.</string>
    <string name="no_post_notifications_permissions">Програма не має дозволу показувати повідомлення, а віддтак і мініплейер.</string>
    <string name="no_post_notifications_permissions_title">Мініплейер недоступний</string>
    <string name="no_post_notifications_permissions_error">Програма не має дозволу показувати повідомлення.</string>
    <string name="grant_permissions">Відкрити системні налаштування?</string>
    <string name="title">Назва</string>
    <string name="reader">Казкар</string>
    <string name="showBabiesTales">Відображати казки для дошкільнят</string>
    <string name="showKidsTales">Відображати казки для молодшого шкільного віку</string>
    <string name="showLullabies">Відображати колискові</string>
    <string name="showOnlyFavorite">Відображати лише улюблені казки (Відмічені ⭐)</string>
    <string name="showOnlyFavoriteOn">Улюблені казки</string>
    <string name="showOnlyFavoriteOff">Усі казки</string>
    <string name="addedToFavorites">\'%s\' додано до списку \'Улюблені\'</string>
    <string name="removedFromFavorites">\'%s\' видалено зі списку \'Улюблені\'</string>
    <string name="nothing">Нічого не знайдено.</string>
    <string name="nothingToShow">Нічого не знайдено. Перевірте фільтри у налаштуваннях.</string>
    <string name="filterTalesHint">Назва чи казкар</string>
    <string name="filterReadersHint">Казкар</string>
    <string name="download_completed">Завантажено казок: %d</string>
    <string name="done">Готово.</string>
    <string name="an_error_occurred">Сталась помилка.</string>
    <string name="not_enough_space">Завантаження неможливе. Доступно %s вільного місця, а необхідно мінімум %s</string>
    <string name="download">Завантажити</string>
    <string name="suggestToDownloadFavorite">У вас %d улюблених казок. Хочете завантажити їх на пристрій і вони будуть доступні офф-лайн?</string>
    <string name="downloading">Завантаження казок…</string>
    <string name="clear">Видалити</string>
    <string name="continueDownload">Продовжити завантаження?</string>
    <string name="not_all_tales">Не всі казки завантажено.</string>
    <string name="not_downloaded_favorite_tales">Не всі улюблені казки завантажено.</string>
    <string name="freeSpace">\n(Доступно: %s вільного місця)</string>
    <string name="usedSpace">\n(Використано: %s)</string>
    <string name="fontColor">Змінити колір тексту</string>
    <string name="downloadAllTales">Зберігати всі казки на пристрої</string>
    <string name="downloadFavoriteTales">Зберігати улюблені казки на пристрої</string>
    <string name="downloadAllTalesQuestion">Зберігти всі казки на пристрої? Для цього потрібно приблизно %s вільного місця.</string>
    <string name="downloadFavoriteTalesQuestion">Зберігати тільки улюблені казки на пристрої? Для прослуховування інших буде потрібен Інтернет.</string>
    <string name="clearAllTalesQuestion">Видалити збережені казки? Улюблені казки залишаться на пристрої.</string>
    <string name="clearFavoriteTalesQuestion">Видалити збережені улюблені казки? Надалі для прослуховування буде потрібен Інтернет.</string>
    <string name="newVersion">Доступна нова версія %s!</string>
    <string name="showBigImages">Великі зображення для Казок\n(Впливає на швидкість роботи)</string>
    <string name="groupByReader">Групувати казки за казкарем</string>
    <string name="parentLock">Захистити Налаштування від дітей</string>
    <string name="update">Оновити</string>
    <string name="cancel">Скасувати</string>
    <string name="writeFB">Написати у FaceBook</string>
    <string name="writeInsta">Написати у Instagram</string>
    <string name="playback">Відтворення:</string>
    <string name="basicSettings">Загальні налаштування:</string>
    <string name="sorting">Сортування казок:</string>
    <string name="talesView">Список казок:</string>
    <string name="sort19">За тривалістю (спершу найкоротші)</string>
    <string name="sort91">За тривалістю (спершу найдовші)</string>
    <string name="sortAsc">За назвою</string>
    <string name="shuffle">Перемішати казки</string>
    <string name="skipIntro">Пропускати мелодію перед казкою</string>
    <string name="tale_001">Заєць хвалько</string>
    <string name="tale_002">Лис, цап і мішок моркви</string>
    <string name="tale_003">Чому кенгуру стрибає</string>
    <string name="tale_004">Бджола рятує гусці життя</string>
    <string name="tale_005">Жаба боязкіша за зайця</string>
    <string name="tale_006">Лисиця і Рак</string>
    <string name="tale_007">Сонячна квітка</string>
    <string name="tale_008">Чому кіт умивається тільки по обіді</string>
    <string name="tale_009">Як лис вовка маслом частував</string>
    <string name="tale_010">Мишача рада</string>
    <string name="tale_011">Кошеня й мишеня</string>
    <string name="tale_012">Як курочка півника врятувала</string>
    <string name="tale_013">Черепаха і олень</string>
    <string name="tale_014">Іссумбосі</string>
    <string name="tale_015">Гарна дружина</string>
    <string name="tale_016">Том Тіт Тот</string>
    <string name="tale_017">Чарівне горнятко</string>
    <string name="tale_018">Просинка</string>
    <string name="tale_019">Колобок</string>
    <string name="tale_020">Лисичка та Журавель</string>
    <string name="tale_021">Рукавичка</string>
    <string name="tale_022">Дві білочки</string>
    <string name="tale_023">Коза-дереза</string>
    <string name="tale_024">Курочка ряба</string>
    <string name="tale_025">Ріпка</string>
    <string name="tale_026">Пан Коцький</string>
    <string name="tale_027">Лисичка суддя</string>
    <string name="tale_028">Як пан по німецькому балакав</string>
    <string name="tale_029">Заморське яйце</string>
    <string name="tale_030">Казка про билинку та горобця</string>
    <string name="tale_031">Золота пшениця</string>
    <string name="tale_032">Кривенька качечка</string>
    <string name="tale_033">Хитрий півень</string>
    <string name="tale_034">Як соловейко чоловіка розуму навчив</string>
    <string name="tale_035">Голе телятко</string>
    <string name="tale_036">Розум та щастя</string>
    <string name="tale_037">Колосок</string>
    <string name="tale_038">Як дурень випросив вогню</string>
    <string name="tale_039">Котик та півник</string>
    <string name="tale_040">Чому зайці сірі</string>
    <string name="tale_041">Круглячок</string>
    <string name="tale_042">Чабанець</string>
    <string name="tale_043">Казка про липку і зажерливу бабу</string>
    <string name="tale_044">Чому гуси миються у воді</string>
    <string name="tale_045">Іван Побиван</string>
    <string name="tale_046">Коржик</string>
    <string name="tale_047">Лисичка і глечик</string>
    <string name="tale_048">Старий дуб і діброва</string>
    <string name="tale_049">Золотий мак</string>
    <string name="tale_050">Котик</string>
    <string name="tale_051">Про найцінніше</string>
    <string name="tale_052">Хто не робить той не їсть</string>
    <string name="tale_053">Дарунки з трьох зернин</string>
    <string name="tale_054">Три персні</string>
    <string name="tale_055">Про бідного багача</string>
    <string name="tale_056">Казка про чемного кушніра</string>
    <string name="tale_057">Війна грибів з жуками</string>
    <string name="tale_058">Вовк та вовчиця</string>
    <string name="tale_059">Орел і кріт</string>
    <string name="tale_060">Сніжниця</string>
    <string name="tale_061">Цап та баран</string>
    <string name="tale_062">Казка про чоловіка і Данила Бурмила</string>
    <string name="tale_063">Лисиця та їжак</string>
    <string name="tale_064">Льодяне царство</string>
    <string name="tale_065">Нерозумне кошеня</string>
    <string name="tale_066">Про щасливого бідняка і нещасного пана</string>
    <string name="tale_067">Як журавель помирив мишу з жабою</string>
    <string name="tale_068">Хліб і золото</string>
    <string name="tale_069">Три бажання</string>
    <string name="tale_070">Про неробу Юрка</string>
    <string name="tale_071">Калиточка</string>
    <string name="tale_072">Олень, черепаха і птах</string>
    <string name="tale_073">Вовк під вікном</string>
    <string name="tale_074">Бджоли та ведмідь</string>
    <string name="tale_075">Журавель та чапля</string>
    <string name="tale_076">Хвалькувата муха</string>
    <string name="tale_077">Вівчар Василько і золоті гори</string>
    <string name="tale_078">Чому тигр такий злий на кота</string>
    <string name="tale_079">Як Джек ходив щастя шукати</string>
</resources>