<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:id="@+id/basicSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basicSettings"
                android:fontFamily="@font/chalkboard"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/downloadAllTales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/downloadAllTales"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/downloadFavoriteTales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/downloadFavoriteTales"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/parentLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/parentLock"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showOnlyFavorite"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/fontColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/fontColor"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:typeface="serif" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="-5dp" />


            <TextView
                android:id="@+id/talesView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/talesView"
                android:fontFamily="@font/chalkboard"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/showBabiesTales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/showBabiesTales"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTales"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/showKidsTales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/showKidsTales"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTales"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/showOnlyFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/showOnlyFavorite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTales"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/showBigImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/showBigImages"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showOnlyFavorite"
                tools:typeface="serif" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="-5dp" />

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sorting"
                android:fontFamily="@font/chalkboard"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/sorting"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/sort19"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sort19"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sort91"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sort91"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/sortAsc"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/sortAsc"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/shuffle"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text= "@string/shuffle"
                    android:fontFamily="@font/chalkboard"
                    android:textSize="16sp" />
            </RadioGroup>

            <Switch
                android:id="@+id/groupByReader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/groupByReader"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTales"
                tools:typeface="serif" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="-5dp" />

            <TextView
                android:id="@+id/playback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playback"
                android:fontFamily="@font/chalkboard"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/skipIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/skipIntro"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/downloadFavoriteTales"
                tools:typeface="serif" />

            <Switch
                android:id="@+id/autoQuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/sleep_timeout"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showOnlyFavorite"
                tools:typeface="serif" />

            <SeekBar
                android:id="@+id/timeout"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:max="36"
                android:min="1"
                android:progress="6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoQuit" />

            <Switch
                android:id="@+id/volumeControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/chalkboard"
                android:text="@string/volume_timeout"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showOnlyFavorite"
                tools:typeface="serif" />

            <SeekBar
                android:id="@+id/volumeControlTimeout"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:max="15"
                android:min="2"
                android:progress="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoQuit" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="-5dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>